--- a/index.html
+++ b/index.html
@@ -1,32 +1,123 @@
-<!DOCTYPE html>  
-<html lang="en">  
-<head>  
-    <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Simple HTML Page</title>  
-    <style>  
-        body {  
-            font-family: Arial, sans-serif;  
-            margin: 20px;  
-            background-color: #f4f4f4;  
-        }  
-        h1 {  
-            color: #333;  
-        }  
-        p {  
-            font-size: 16px;  
-            line-height: 1.5;  
-        }  
-        a {  
-            color: #007BFF;  
-            text-decoration: none;  
-        }  
-        a:hover {  
-            text-decoration: underline;  
-        }  
-    </style>  
-</head>  
-<body>  
-    <h1>This is a simple html page</h1>  
-</body>  
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web</title>
+    <link rel="stylesheet" href="styles.css" />
+      <style>
+          * {
+  padding: 0;
+}
+
+.heading {
+  text-align: center;
+  font-size: 20px;
+  background-color: #7b68ee;
+  padding: 20px;
+  margin-top: 0;
+  color: white;
+  border-bottom: white;
+  width: 96%;
+  margin: auto;
+}
+
+body {
+  width: 100vw;
+  margin: auto;
+  overflow-x: hidden;
+ 
+}
+
+ul {
+  padding-top: 40px;
+}
+
+p {
+  
+  text-align: start;
+}
+
+.flex {
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.sidebar {
+    width: 200px;
+    height: 100vh;
+    background-color: #7b68ee;
+    padding: 20px;
+    color: white;
+    font-size: 17px;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.elements {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h2 {
+    text-align: start;
+    padding: 0 50px 0 50px;
+}
+
+p {
+    width: 90%;
+    padding: 0 20px 0 20px;
+    color: #333;
+    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+      </style>
+  </head>
+  <body>
+     <div class="flex">
+      <div class="sidebar">
+        <div class="elements">
+            <span><a href="index.html">HTML</a></span>
+            <span><a href="./css.html">CSS</a></span>
+            <span><a href="./javascript.html">JavaScript</a></span>
+        </div>
+      </div>
+      <div>
+        <h1 class="heading">WEB</h1>
+        <h2>HTML</h2>
+        <div class="video">
+            <iframe
+              src="https://www.youtube.com"
+              frameborder="0"
+              width="350px"
+              height="350px"
+              
+            ></iframe>
+        </div>
+        <p>
+          HTML (HyperText Markup Language) is the standard language used to
+          create and structure content on the web. It provides the foundational
+          elements that define how text, images, links, and other content are
+          displayed in web browsers.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
